# OpenEnvHack-Submission

./: Dockerfile  README.md  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  server.py  tasks_data.py
server/: app.py
