[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv email triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "httpx==0.27.0",
  "openai==1.30.1",
  "python-multipart==0.0.9",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
